--- a/angular.json
+++ b/angular.json
@@ -91,8 +91,23 @@
             ],
             "scripts": []
           }
+        },
+        "lint": {
+          "builder": "@angular-eslint/builder:lint",
+          "options": {
+            "lintFilePatterns": [
+              "src/**/*.ts",
+              "src/**/*.html"
+            ]
+          }
         }
       }
     }
+  },
+  "cli": {
+    "analytics": "60382235-ab4e-4b43-8b32-5d7af74098e3",
+    "schematicCollections": [
+      "@angular-eslint/schematics"
+    ]
   }
 }
